fix: update google auth
